media/css/style.css
@import url(http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400italic,700,700italic);
@import url(http://fonts.googleapis.com/css?family=Gentium+Basic&text=Sympy%20Live);


* {
  padding: 0px;
  margin: 0px;
}

body {
  font-family: 'Gentium Book Basic', serif;
  font-size: 100%;
}

h1 {
  font-family: 'Gentium Basic', serif;
  font-weight: normal;
  color: #FFF;
}

div.menu {
  padding: 0 0.5em;
  font-family: sans-serif;
  border-bottom: 2px solid #81B953;
}

div.menu a {
  color: #00F !important;
  text-decoration: none;
  font-size: 0.75em;
  line-height: 0.75em;
  margin-right: 0.5em;
}

div.menu a.selected {
  color: black !important;
  text-decoration: none;
  font-weight: bold;
}

div.result {
  width: 600px;
  margin: 10px auto;
}

div.result_card {
  border: 2px solid #a8a8a8;
  margin: 10px;
  padding: 10px;
  background: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

div.result_card.result_card_error {
  border: 2px solid #F00;
}

/* Highlight position of a syntax error */
div.result_card_error .cell_output_plain span:first-child {
  border-right: 1px solid #F00;
}

div.card_title {
  font-size: 12pt;
}

div.cell_input {
  color: black;
  font-size:12pt;
  margin-top: 10px;
}

div.cell_output {
  color: black;
  font-size: 12pt;
  border-top: 1px solid  #a8a8a8;
  padding: 10px 0 0 0;
  opacity: 0.1;
}

div.cell_output div.cell_output_plain {
  font-family: monospace;
  text-align: center;
}

div.input {
  text-align: center;
  width: 550px;
  padding: 20px 0;
  width: 100%;
  background: #3B5526;
}

div.input form {
  margin: 0 auto;
  margin-top: 20px;
  width: 580px;
}

div.input input[type="text"] {
  width: 83%;
  height: 1.25em;
  line-height: 1.25em;
  font-size: 1.25em;
  padding: 0 0.25em;
  border: 0;
}

div.input input[type="submit"] {
  width: 15%;
  line-height: 1.25em;
  font-size: 1.25em;
  color: #FFF;
  padding: 0 1em;
  border: 0;
  background-color: #96C56F;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #96C56F), color-stop(100%, #81B953));
  background-image: -webkit-linear-gradient(top, #96C56F, #81B953);
  background-image: -moz-linear-gradient(top, #96C56F, #81B953);
  background-image: -ms-linear-gradient(top, #96C56F, #81B953);
  background-image: -o-linear-gradient(top, #96C56F, #81B953);
  background-image: linear-gradient(top, #96C56F, #81B953);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#96C56F, endColorstr=#81B953);
}

div.input input[type="submit"]:hover {
  background-color: #7bb64b;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7bb64b), color-stop(100%, #689a3f));
  background-image: -webkit-linear-gradient(top, #7bb64b, #689a3f);
  background-image: -moz-linear-gradient(top, #7bb64b, #689a3f);
  background-image: -ms-linear-gradient(top, #7bb64b, #689a3f);
  background-image: -o-linear-gradient(top, #7bb64b, #689a3f);
  background-image: linear-gradient(top, #7bb64b, #689a3f);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#7bb64b, endColorstr=#689a3f);
}

div.foot {
  text-align: center;
  font-size: 10pt;
}

h2 {
  padding: 10px 8px;
}

h3 {
  padding: 5px 8px;
}

p {
  padding: 0px 8px;
}

@media screen and (max-device-width: 960px) {
  .menu {
    font-size: 1.25em;
  }
  
  div.input form {
    margin: 0 auto;
    margin-top: 10px;
    width: auto;
  }

  div.input input[type="text"] {
    margin: 0 auto;
    width: 90%;
  }

  div.input input[type="submit"] {
    width: 50%;
    height: 150%;
    line-height: 150%;
  }

  input {
    border-radius: 0;
  }

  div.result {
    width: auto;
    max-width: 800px;
    margin: 10px auto;
  }
}

